@@ -2,6 +2,19 @@ FROM hrafique/openjdk-quantal
 
 MAINTAINER Haroon Rafique https://github.com/hrafique
 
+# maven settings file
+ADD files/settings.xml /root/.m2/settings.xml
+ENV OJDBC_VERSION 11.2.0.2
+
+# default to what we get with wnameless/oracle-xe-11g
+ENV ORACLE_DBA_PASSWORD oracle
+
+# oracle driver
+ADD files/ojdbc6_g-$OJDBC_VERSION.jar /tmp/ojdbc6_g-$OJDBC_VERSION.jar
+
+# install maven
+
+RUN apt-get update
 RUN apt-get -y install wget
 RUN wget --no-verbose -O /tmp/apache-maven-3.0.5.tar.gz \
     http://archive.apache.org/dist/maven/maven-3/3.0.5/binaries/apache-maven-3.0.5-bin.tar.gz
@@ -18,71 +31,29 @@ RUN rm -f /tmp/apache-maven-3.0.5.tar.gz
 
 ENV MAVEN_OPTS -XX:MaxPermSize=350m -Xmx2g
 
-RUN apt-get -y install subversion
-
-# tomcat
-ENV TOMCAT_VERSION 6.0.37
-RUN mkdir -p /usr/share/tomcat
-RUN wget --no-verbose -O /tmp/apache-tomcat-$TOMCAT_VERSION.tar.gz \
-    http://archive.apache.org/dist/tomcat/tomcat-6/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz
-# stop building if md5sum does not match
-RUN echo "f90b100cf51ae0a444bef5acd7b6edb2  /tmp/apache-tomcat-$TOMCAT_VERSION.tar.gz" | \
-    md5sum -c
-
-# install tomcat in /usr/share/tomcat
-RUN tar xzf /tmp/apache-tomcat-$TOMCAT_VERSION.tar.gz --strip-components=1 -C /usr/share/tomcat
-RUN rm -f /tmp/apache-tomcat-$TOMCAT_VERSION.tar.gz
-ENV CATALINA_HOME /usr/share/tomcat
-ENV CATALINA_OPTS -Xmx1g -XX:MaxPermSize=300m
-
-# maven settings file
-ADD files/settings.xml /root/.m2/settings.xml
-
-ENV OJDBC_VERSION 11.2.0.2
-# oracle driver
-ADD files/ojdbc6_g-$OJDBC_VERSION.jar ojdbc6_g-$OJDBC_VERSION.jar
 # install oracle driver in local maven repo
 RUN mvn install:install-file -DgroupId=com.oracle -DartifactId=ojdbc6_g \
     -Dversion=$OJDBC_VERSION -Dpackaging=jar \
-    -Dfile=ojdbc6_g-$OJDBC_VERSION.jar
+    -Dfile=/tmp/ojdbc6_g-$OJDBC_VERSION.jar
 
-# install maven-dependency-plugin
-RUN mvn org.apache.maven.plugins:maven-dependency-plugin:2.8:get \
-    -Dartifact=org.apache.maven.plugins:maven-dependency-plugin:2.8:jar
 
-#### setup tomcat
-# copy oracle driver to tomcat lib directory
-RUN cp ojdbc6_g-$OJDBC_VERSION.jar /usr/share/tomcat/lib
-RUN rm -rf /usr/share/tomcat/webapps/*
-ADD files/server.xml /usr/share/tomcat/conf/server.xml
+# install subversion 
 
-ENV BUILD_NUMBER 640
-# ask maven to download war artifact only (by using dependency:copy goal)
-RUN mvn org.apache.maven.plugins:maven-dependency-plugin:2.8:copy \
-    -Dartifact=org.kuali.student.web:ks-with-rice-bundled:2.1.1-FR2-M1-build-$BUILD_NUMBER:war \
-    -DoutputDirectory=.
+RUN apt-get -y install subversion
 
-RUN mkdir -p /svnexport
+ENV BUILD_NUMBER 799
 
-# export sources from subversion repo
-ENV SVNEXPORT_PREFIX https://svn.kuali.org/repos/student/enrollment/ks-deployments/tags/builds/ks-deployments-2.1/2.1.1-FR2-M1/build-$BUILD_NUMBER
+# install maven dependency plugin
 
-# export ks-impex-bundled-db
-RUN svn export -q $SVNEXPORT_PREFIX/ks-dbs/ks-impex/ks-impex-bundled-db \
-    /svnexport/ks-impex-bundled-db-build-$BUILD_NUMBER
-# export ks-deployment-resources
-RUN svn export -q $SVNEXPORT_PREFIX/ks-deployment-resources \
-    /svnexport/ks-deployment-resources-$BUILD_NUMBER
+RUN mkdir /svn-export
 
-# set some default values for environment variables
-ENV ORACLE_DBA_URL jdbc:oracle:thin:@localhost:1521:XE
-ENV ORACLE_DBA_PASSWORD manager
-ENV SKIP_DB_RESET false
+RUN cd /svn-export && svn co https://svn.kuali.org/repos/student/enrollment/ks-deployments/tags/builds/ks-deployments-2.1/2.1.1-FR2-M1/build-${BUILD_NUMBER}/ks-dbs/ks-impex/ks-impex-bundled-db/
 
-ADD files/launch-tomcat.sh /launch-tomcat.sh
-ADD files/rice.keystore /rice.keystore
-RUN chmod +x /launch-tomcat.sh
+# download the dependencies for impex
+RUN cd /svn-export/ks-impex-bundled-db && mvn -Pdb,oracle org.apache.maven.plugins:maven-dependency-plugin:2.8:resolve
 
-EXPOSE 8080
+ADD files/impex-db.sh /impex-db.sh
 
-CMD /launch-tomcat.sh
+RUN chmod +x /impex-db.sh
+
+CMD /impex-db.sh
